·简历信息修改

--- a/view/curriculum_vitae/index/index.html
+++ b/view/curriculum_vitae/index/index.html
@@ -8,36 +8,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="小Y的个人简历-Bootstrap模板">
         <meta name="author" content="3rd Wave Media">
-        <link rel="shortcut icon" href="/static/css/img/favicon_icon/cuuriculum_vitae_favicon.ico">
+        <link rel="shortcut icon" href="../../../static/css/img/favicon_icon/cuuriculum_vitae_favicon.ico">
 
-        <link rel="stylesheet" href="/static/css/bootstrap/bootstrap.min.css">
-        <link rel="stylesheet" href="/static/css/fonts/font-awesome/font-awesome.css">
+        <link rel="stylesheet" href="../../../static/css/bootstrap/bootstrap.min.css">
+        <link rel="stylesheet" href="../../../static/css/fonts/font-awesome/font-awesome.css">
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
-        <link rel="stylesheet" href="/static/css/github-activity/github-activity.css">
+        <link rel="stylesheet" href="../../../static/css/github-activity/github-activity.css">
 
-        <link id="theme-style" rel="stylesheet" href="/static/css/dist/curriculum_vitae/index.css">
+        <link id="theme-style" rel="stylesheet" href="../../../static/css/dist/curriculum_vitae/index.css">
 
-        <script type="text/javascript" src="/static/js/jquery/jquery.min.js"></script>
-        <script type="text/javascript" src="/static/js/bootstrap/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../../../static/js/jquery/jquery.min.js"></script>
+        <script type="text/javascript" src="../../../static/js/bootstrap/bootstrap.min.js"></script>
         <!-- github activity plugin -->
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-        <script type="text/javascript" src="/static/js/github-activity/github-activity.js"></script>
+        <script type="text/javascript" src="../../../static/js/github-activity/github-activity.js"></script>
         <!-- custom js -->
-        <script type="text/javascript" src="/static/js/dist/curriculum_vitae/index.js"></script>
+        <script type="text/javascript" src="../../../static/js/dist/curriculum_vitae/index.js"></script>
     </head>
 
     <body>
         <header class="header">
             <div class="container">
-                <img class="profile-image img-responsive pull-left" src="/static/css/img/curriculum_vitae/avator.png">
+                <img class="profile-image img-responsive pull-left" src="../../../static/css/img/curriculum_vitae/avator.png">
                 <div class="profile-content pull-left">
                     <h1 class="name">叶森伟</h1>
                     <h2 class="desc">软件开发工程师</h2>
                     <ul class="social list-inline">
                         <li><a class="social-a" data-toggle="modal" data-target="#modal_qq" data-toggle="tooltip" data-placement="bottom" title="QQ"><i class="fa fa-qq"></i></a></li>
                         <li><a class="social-a" data-toggle="modal" data-target="#modal_wechat" data-toggle="tooltip" data-placement="bottom" title="微信"><i class="fa fa-weixin"></i></a></li>
-                        <li><a class="social-a" href="https://github.com/404742630/my_website" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+                        <li><a class="social-a" href="https://github.com/404742630/my_website" target="_blank" data-toggle="tooltip" data-placement="bottom" title="github"><i class="fa fa-github-alt"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                                     <p class="summary">一个基于大数据的用户健康数据查询、分析、解读、统计、管理的健康平台</p>
                                     <div class="featured-image">
                                         <img class="img-responsive project-image"
-                                             src="/static/css/img/curriculum_vitae/projects/project-featured.png"
+                                             src="../../../static/css/img/curriculum_vitae/projects/project-featured.png"
                                              alt="大医在线"/>
                                     </div>
                                     <div class="desc text-left">
@@ -87,7 +87,7 @@
                                 <div class="item row">
                                     <a class="col-md-4 col-sm-4 col-xs-12">
                                         <img class="img-responsive project-image"
-                                             src="/static/css/img/curriculum_vitae/projects/bootstrap.png" alt="后台客服/运维网站的搭建"/>
+                                             src="../../../static/css/img/curriculum_vitae/projects/bootstrap.png" alt="后台客服/运维网站的搭建"/>
                                     </a>
                                     <div class="desc col-md-8 col-sm-8 col-xs-12">
                                         <h3 class="title">后台客服/运维网站的搭建</h3>
@@ -175,7 +175,15 @@
                             <h2 class="heading sr-only">基本信息</h2>
                             <div class="content">
                                 <ul class="list-unstyled">
-                                    <li><i class="fa fa-map-marker"></i><span class="sr-only">地址:</span>浙江省杭州市
+                                    <li><i class="fa fa-user"></i><span class="sr-only">姓名:</span>叶森伟
+                                    </li>
+                                    <li><i class="fa fa-intersex"></i><span class="sr-only">性别:</span>男
+                                    </li>
+                                    <li><i class="fa fa-genderless"></i><span class="sr-only">年龄:</span>24周岁
+                                    </li>
+                                    <li><i class="fa fa-male"></i><span class="sr-only">政治面貌:</span>党员
+                                    </li>
+                                    <li><i class="fa fa-map-marker"></i><span class="sr-only">地址:</span>浙江省杭州市西湖区
                                     </li>
                                     <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span>404742630@qq.com
                                     </li>
@@ -285,7 +293,7 @@
             <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <img class="modal-img" src="/static/css/img/curriculum_vitae/qq.png">
+                        <img class="modal-img" src="../../../static/css/img/curriculum_vitae/qq.png">
                     </div>
                 </div>
             </div>
@@ -295,7 +303,7 @@
             <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <img class="modal-img" src="/static/css/img/curriculum_vitae/wechat.png">
+                        <img class="modal-img" src="../../../static/css/img/curriculum_vitae/wechat.png">
                     </div>
                 </div>
             </div>
