--- a/view/static_demo/jscssframe/plugins_by_other_demo.html
+++ b/view/static_demo/jscssframe/plugins_by_other_demo.html
@@ -38,7 +38,7 @@
         </h1>
     </div>
     <div class="row">
-        <div class="col-lg-3 col-md-3 hidden-sm hidden-xs menu" role="menu" id="menu">
+        <div class="col-lg-3 col-md-3 hidden-sm hidden-xs" role="menu" id="menu">
             <nav class="affix-top">
                 <ul class="nav nav-pills nav-stacked" id="menu_ul">
                     <li class="active"><a href="#demo_datetime_picker">DateTime Picker<i
@@ -63,20 +63,20 @@
                 <div class="page-header">
                     <h2>
                         DateTime Picker
-                        <span class="link">
+                        <i class="link">
                             <a class="glyphicon glyphicon-link" target="_blank"
                                href="http://www.bootcss.com/p/bootstrap-datetimepicker/"></a>
-                        </span>
+                        </i>
                     </h2>
                 </div>
                 <div class="base-example-div">
                     <p>时间选择控件</p>
                     <div class="input-group col-xs-12 col-sm-8 col-md-6 col-lg-6">
                         <input class="form-control" type="text" value="" id="datetimepicker" readonly>
-                        <span class="input-group-addon" id="datetimepicker_clear"><span
-                                class="glyphicon glyphicon-remove"></span></span>
-                        <span class="input-group-addon" id="datetimepicker_show"><span
-                                class="glyphicon glyphicon-calendar"></span></span>
+                        <i class="input-group-addon" id="datetimepicker_clear"><i
+                                class="glyphicon glyphicon-remove"></i></i>
+                        <i class="input-group-addon" id="datetimepicker_show"><i
+                                class="glyphicon glyphicon-calendar"></i></i>
                     </div>
                     <div class="code margin-top">
                         <pre>
@@ -113,10 +113,10 @@
                 <div class="page-header">
                     <h2>
                         File Input
-                        <span class="link">
+                        <i class="link">
                             <a class="glyphicon glyphicon-link" target="_blank"
                                href="http://plugins.krajee.com/file-input"></a>
-                        </span>
+                        </i>
                     </h2>
                 </div>
                 <div class="base-example-div">
@@ -149,16 +149,16 @@
                 <div class="page-header">
                     <h2>
                         Typeahead
-                        <span class="link">
+                        <i class="link">
                             <a class="glyphicon glyphicon-link" target="_blank"
                                href="https://github.com/bassjobsen/Bootstrap-3-Typeahead"></a>
-                        </span>
+                        </i>
                     </h2>
                 </div>
                 <div class="base-example-div">
                     <p>自动完成输入</p>
                     <div class="input-group col-lg-5 col-md-5 col-sm-8 col-xs-12">
-                        <span class="input-group-addon" id="basic-addon1">AutoComplate</span>
+                        <i class="input-group-addon" id="basic-addon1">AutoComplate</i>
                         <input type="text" class="form-control" id="typeahead" data-provide="typeahead"
                                autocomplete="off">
                     </div>
@@ -175,19 +175,6 @@
                 </div>
             </section>
             <section id="demo_li_marquee">
-                <style>
-                    #limarquee {
-                        width: 100%;
-                        height: 100px;
-                        margin: 15px auto;
-                        font-size: 0;
-                    }
-
-                    #limarquee img {
-                        margin-left: 10px;
-                        height: 100%;
-                    }
-                </style>
                 <div class="page-header">
                     <h2>
                         liMarquee(可作进阶)
@@ -241,10 +228,10 @@
                 <div class="page-header">
                     <h2>
                         Wang Editor
-                        <span class="link">
+                        <i class="link">
                             <a class="glyphicon glyphicon-link" target="_blank"
                                href="http://www.kancloud.cn/wangfupeng/wangeditor2/113961"></a>
-                        </span>
+                        </i>
                     </h2>
                 </div>
                 <div class="base-example-div">
@@ -263,7 +250,7 @@
                     </div>
                     <div class="input-group margin-top col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <textarea id="wang_editor_textarea" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" rows="5"
-                                  readonly style="resize:none"></textarea>
+                                  readonly></textarea>
                     </div>
                     <div class="code margin-top">
                         <pre>
@@ -306,19 +293,14 @@
                 <div class="page-header">
                     <h2>
                         Unslider
-                        <span class="link">
+                        <i class="link">
                             <a class="glyphicon glyphicon-link" target="_blank"
                                href="http://unslider.com/"></a>
-                        </span>
+                        </i>
                     </h2>
                 </div>
                 <div class="base-example-div">
                     <p>图片轮播</p>
-                    <style>
-                        #unslider > ul > li > img {
-                            width: 100%;
-                        }
-                    </style>
                     <div class="input-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div id="unslider">
                             <ul>
@@ -405,10 +387,10 @@
                 <div class="page-header">
                     <h2>
                         Hammer
-                        <span class="link">
+                        <i class="link">
                             <a class="glyphicon glyphicon-link" target="_blank"
                                href="http://hammerjs.github.io/"></a>
-                        </span>
+                        </i>
                     </h2>
                 </div>
                 <div class="base-example-div">
