--- a/view/static_demo/material_design/dash_board.html
+++ b/view/static_demo/material_design/dash_board.html
@@ -6,25 +6,120 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../../../static/css/img/favicon_icon/cuuriculum_vitae_favicon.ico">
     <link rel="stylesheet" href="../../../static/css/material_design_lite/material.css">
-    <link rel="stylesheet" href="../../../static/css/material_design_lite/material.icons.css">
+    <link rel="stylesheet" href="../../../static/css/fonts/material/material.icons.css">
+    <link rel="stylesheet" href="../../../static/css/fonts/font-awesome/font-awesome.css">
+    <link rel="stylesheet" href="../../../static/css/dist/static_demo/material_design/dash_board.css">
+    <script src="../../../static/js/jquery/jquery.js"></script>
     <script src="../../../static/js/material_design_lite/material.js"></script>
+    <script src="../../../static/js/dist/static_demo/material_design/dash_board.js"></script>
 </head>
 <body>
-<form method="get" action="#" id="form">
-    <input type="text" id="b">
-    <input type="button" id="a" style="display: none;" value="display">
-</form>
-<script>
-    var form = document.getElementById("form");
-    form.addEventListener("submit", function () {
-        console.log(1);
-        document.getElementById("a").style.display = "block";
-        document.getElementById("a").focus();
-        return false;
-    })
-    document.getElementById("a").onclick = function() {
-        document.getElementById("b").focus();
-    }
-</script>
+<layout class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header mdl-layout__header--seamed">
+        <div class="mdl-layout__header-row">
+            <span class="mdl-layout-title">Title One</span>
+            <div class="mdl-layout-spacer"></div>
+            <div class="mdl-navigation mdl-cell--hide-tablet mdl-cell--hide-phone">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+                    <label class="mdl-button mdl-js-button mdl-button--icon" for="header_search_input"
+                           id="header_search_icons">
+                        <i class="material-icons">search</i>
+                    </label>
+                    <div class="mdl-textfield__expandable-holder">
+                        <input class="mdl-textfield__input" type="text" id="header_search_input">
+                    </div>
+                    <div class="mdl-tooltip" data-mdl-for="header_search_icons">
+                        搜索
+                    </div>
+                </div>
+                <div class="mdl-badge mdl-badge--overlap" data-badge="1">
+                    <div class="mdl-button mdl-js-button mdl-button--icon" id="header_notice">
+                        <i class="material-icons">notifications</i>
+                    </div>
+                    <div class="mdl-tooltip" data-mdl-for="header_notice">
+                        通知
+                    </div>
+                </div>
+                <div class="mdl-chip mdl-chip--contact mdl-chip--deletable" id="avatar_menu">
+                    <img class="mdl-chip__contact" src="../../../static/css/img/static_demo/html_demo/limarquee/1.jpg">
+                    <span class="mdl-chip__text">UserNameUserNameUserName</span>
+                    <div class="mdl-chip__action">
+                        <i class="material-icons">arrow_drop_down</i>
+                    </div>
+                </div>
+                <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-list" for="avatar_menu">
+                    <li class="mdl-menu__item mdl-list__item">
+                        <span class="mdl-list__item-primary-content">
+                            <i class="material-icons mdl-list__item-icon">account_box</i>
+                            个人资料
+                        </span>
+                    </li>
+                    <li class="mdl-menu__item mdl-menu__item--full-bleed-divider mdl-list__item">
+                        <span class="mdl-list__item-primary-content">
+                            <i class="material-icons mdl-list__item-icon">settings</i>
+                            设置
+                        </span>
+                    </li>
+                    <li class="mdl-menu__item mdl-list__item">
+                        <span class="mdl-list__item-primary-content">
+                            <i class="material-icons mdl-list__item-icon">exit_to_app</i>
+                            退出
+                        </span>
+                    </li>
+                </ul>
+            </div>
+            <button class="mdl-button mdl-js-button mdl-button--icon mdl-cell--hide-desktop"
+                    id="header_more_vert_with_phone">
+                <i class="material-icons">more_vert</i>
+            </button>
+            <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-list" for="header_more_vert_with_phone">
+                <li class="mdl-menu__item mdl-menu__item--full-bleed-divider">
+                    <img class="mdl-chip__contact" src="../../../static/css/img/static_demo/html_demo/limarquee/1.jpg">
+                    <span class="mdl-chip__text">UserNameUserNameUserName</span>
+                </li>
+                <li class="mdl-menu__item mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                        <i class="material-icons mdl-list__item-icon">account_box</i>
+                        个人资料
+                    </span>
+                </li>
+                <li class="mdl-menu__item mdl-menu__item--full-bleed-divider mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                        <i class="material-icons mdl-list__item-icon">settings</i>
+                        设置
+                    </span>
+                </li>
+                <li class="mdl-menu__item mdl-menu__item--full-bleed-divider mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                        <i class="material-icons mdl-list__item-icon mdl-badge mdl-badge--overlap" data-badge="1">notifications</i>
+                        通知
+                    </span>
+                </li>
+                <li class="mdl-menu__item mdl-list__item">
+                    <span class="mdl-list__item-primary-content">
+                        <i class="material-icons mdl-list__item-icon">exit_to_app</i>
+                        退出
+                    </span>
+                </li>
+            </ul>
+        </div>
+    </header>
+    <drawer class="mdl-layout__drawer">
+        <div class="mdl-layout-title">
+            <span>Drawer Title</span>
+            <i class="fa fa-fw fa-thumb-tack mdl-layout--large-screen-only mdl-cell--hide-tablet mdl-cell--hide-phone" id="drawer_tack"></i>
+        </div>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link active" href="#">Title One</a>
+          <a class="mdl-navigation__link" href="#">Title Two</a>
+          <a class="mdl-navigation__link" href="#">Title Three</a>
+          <a class="mdl-navigation__link" href="#">Title Four</a>
+          <a class="mdl-navigation__link" href="#">Title Five</a>
+        </nav>
+    </drawer>
+    <main class="mdl-layout__content">
+        <div style="height:1000px;"></div>
+    </main>
+</layout>
 </body>
 </html>
