·MDL dash board模板

--- a/view/static_demo/material_design/dash_board.html
+++ b/view/static_demo/material_design/dash_board.html
@@ -41,8 +41,8 @@
                     </div>
                 </div>
                 <div class="mdl-chip mdl-chip--contact mdl-chip--deletable" id="avatar_menu">
-                    <img class="mdl-chip__contact" src="../../../static/css/img/static_demo/html_demo/limarquee/1.jpg">
-                    <span class="mdl-chip__text">UserNameUserNameUserName</span>
+                    <img class="mdl-chip__contact" src="../../../static/css/img/static_demo/material_design/dash_board/user_grey.png">
+                    <span class="mdl-chip__text">UserName</span>
                     <div class="mdl-chip__action">
                         <i class="material-icons">arrow_drop_down</i>
                     </div>
@@ -74,8 +74,8 @@
             </button>
             <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-list" for="header_more_vert_with_phone">
                 <li class="mdl-menu__item mdl-menu__item--full-bleed-divider">
-                    <img class="mdl-chip__contact" src="../../../static/css/img/static_demo/html_demo/limarquee/1.jpg">
-                    <span class="mdl-chip__text">UserNameUserNameUserName</span>
+                    <img class="mdl-chip__contact" src="../../../static/css/img/static_demo/material_design/dash_board/user_grey.png">
+                    <span class="mdl-chip__text">UserName</span>
                 </li>
                 <li class="mdl-menu__item mdl-list__item">
                     <span class="mdl-list__item-primary-content">
@@ -118,7 +118,116 @@
         </nav>
     </drawer>
     <main class="mdl-layout__content">
-        <div style="height:1000px;"></div>
+        <section class="mdl-grid ">
+            <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                <div class="mdl-card mdl-shadow--4dp">
+                    <div class="mdl-card__title mdl-card--expand">
+                        <img src="../../../static/css/img/static_demo/material_design/dash_board/1.png">
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字。
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <button class="mdl-button mdl-js-button mdl-color-text--green-700">
+                            查看
+                        </button>
+                        <button class="mdl-button mdl-js-button mdl-color-text--red-A400 del-card-button">
+                            删除
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                <div class="mdl-card mdl-shadow--4dp">
+                    <div class="mdl-card__title mdl-card--expand">
+                        <img src="../../../static/css/img/static_demo/material_design/dash_board/2.png">
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字。
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <button class="mdl-button mdl-js-button mdl-color-text--green-700">
+                            查看
+                        </button>
+                        <button class="mdl-button mdl-js-button mdl-color-text--red-A400 del-card-button">
+                            删除
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                <div class="mdl-card mdl-shadow--4dp">
+                    <div class="mdl-card__title mdl-card--expand">
+                        <img src="../../../static/css/img/static_demo/material_design/dash_board/3.png">
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字。
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <button class="mdl-button mdl-js-button mdl-color-text--green-700">
+                            查看
+                        </button>
+                        <button class="mdl-button mdl-js-button mdl-color-text--red-A400 del-card-button">
+                            删除
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                <div class="mdl-card mdl-shadow--4dp">
+                    <div class="mdl-card__title mdl-card--expand">
+                        <img src="../../../static/css/img/static_demo/material_design/dash_board/4.png">
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字。
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <button class="mdl-button mdl-js-button mdl-color-text--green-700">
+                            查看
+                        </button>
+                        <button class="mdl-button mdl-js-button mdl-color-text--red-A400 del-card-button">
+                            删除
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                <div class="mdl-card mdl-shadow--4dp">
+                    <div class="mdl-card__title mdl-card--expand">
+                        <img src="../../../static/css/img/static_demo/material_design/dash_board/5.png">
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字。
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <button class="mdl-button mdl-js-button mdl-color-text--green-700">
+                            查看
+                        </button>
+                        <button class="mdl-button mdl-js-button mdl-color-text--red-A400 del-card-button">
+                            删除
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                <div class="mdl-card mdl-shadow--4dp">
+                    <div class="mdl-card__title mdl-card--expand">
+                        <img src="../../../static/css/img/static_demo/material_design/dash_board/6.png">
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字，描述性文字。
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <button class="mdl-button mdl-js-button mdl-color-text--green-700">
+                            查看
+                        </button>
+                        <button class="mdl-button mdl-js-button mdl-color-text--red-A400 del-card-button">
+                            删除
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </layout>
 </body>
